--- a/style.css
+++ b/style.css
@@ -1,13 +1,26 @@
+html, body {
+  height: 100%;
+  margin: 0;
+  color: black;
+}
 
-body {
-  background-color: #f1f1f1;
+.footer {
+  text-align: center;
+  background-color: #ADD8E6;
+  opacity: 0.7;
+  height: 58px;
 }
 
 .wrapper {
-  max-width: 960px;
-  margin: 0 auto;
-  padding: 20px;
-  background-color: #e6f1ff;
+  border: 20px solid darkblue;
+  padding: 0px;
+}
+
+.line {
+  width: 100%;
+  height: 2px;
+  background-color: black;
+  z-index: 9999;
 }
 
 header {
@@ -16,28 +29,21 @@ header {
 
 nav {
   text-align: center;
-  margin-bottom: 20px;
-}
-
-nav ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
 }
 
 nav ul li {
   display: inline;
-  margin-right: 10px;
+  margin-right: 50px;
 }
 
 nav ul li a {
   text-decoration: none;
-  color: #333;
+  color: black;
   padding: 10px 20px;
   background-color: #c3e6c4;
   border-radius: 20px;
 }
 
-nav ul li a:hover {
-  background-color: #a1d7a2;
+section {
+
 }
