--- a/style.css
+++ b/style.css
@@ -24,12 +24,12 @@ html, body {
   z-index: 9999;
 }
 
-nav ul li {
+nav li {
   display: inline;
   margin-right: 50px;
 }
 
-nav ul li a {
+nav li a {
   text-decoration: none;
   color: black;
   padding: 10px 20px;
@@ -52,4 +52,27 @@ p{
   padding: 20px;
   border-left: 2px solid #ccc;
   border-right: 2px solid #ccc;
+}
+
+img{
+   border: 4px solid black;
+}
+
+.volet {
+  display: none;
+}
+
+.titre-volet {
+  cursor: pointer;
+  font-weight: bold;
+  margin-bottom: 10px;
+  border: 2px solid black;
+  padding: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 65%;
+}
+
+.contenu-volet {
+  padding: 10px;
 }
